log
Thu 25 Apr 2024 07:26:45 PM UTC: 
 tests:  0|6
total_score: 0/70
2351cf2
Thu 25 Apr 2024 09:14:59 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   55 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:54:30: note: referencing an object of size 8 allocated by ‘malloc’
   54 |   HashMap* mapa = (HashMap*) malloc(sizeof(HashMap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:56:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   56 |   mapa->buckets = (Pair**) calloc(mapa->capacity,sizeof(Pair*));
      |       ^~
hashmap.c:54:30: note: referencing an object of size 8 allocated by ‘malloc’
   54 |   HashMap* mapa = (HashMap*) malloc(sizeof(HashMap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:57:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   57 |   mapa->size = 0;
      |       ^~
hashmap.c:54:30: note: referencing an object of size 8 allocated by ‘malloc’
   54 |   HashMap* mapa = (HashMap*) malloc(sizeof(HashMap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c2c0ef0
Thu 25 Apr 2024 09:15:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c33ec7e
Thu 25 Apr 2024 09:16:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b3c0a73
Thu 25 Apr 2024 09:17:33 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
efde6e5
Thu 25 Apr 2024 09:25:05 PM UTC: 
 hashmap.c | 58 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 56 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘get_valid_location’:
hashmap.c:60:66: error: expected expression before ‘||’ token
   60 |       if(map->buckets[loc] == NULL || map->buckets[loc]->key ==  || map->buckets[loc]->key == key)
      |                                                                  ^~
Compilation failed
1f21da8
Thu 25 Apr 2024 09:25:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
948b57c
Thu 25 Apr 2024 09:30:29 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
99c5c3b
Thu 25 Apr 2024 09:35:07 PM UTC: 
 hashmap.c | 45 ++++++++++++++++++---------------------------
 1 file changed, 18 insertions(+), 27 deletions(-)
 tests:  2|4
total_score: 20/70
0dba3eb
Thu 25 Apr 2024 09:36:04 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
99f26a3
Thu 25 Apr 2024 09:44:49 PM UTC: 
 hashmap.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
3d2f7d2
Thu 25 Apr 2024 09:47:24 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
e2070e7
Thu 25 Apr 2024 09:48:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b54757c
Thu 25 Apr 2024 09:52:58 PM UTC: 
 hashmap.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
 tests:  0|0
f6c67c9
Thu 25 Apr 2024 09:53:25 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b63468e
Thu 25 Apr 2024 09:53:35 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8941d7e
Thu 25 Apr 2024 09:56:51 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|0
7bd4877
Thu 25 Apr 2024 10:06:11 PM UTC: 
 hashmap.c | 57 +++++++++++----------------------------------------------
 1 file changed, 11 insertions(+), 46 deletions(-)
 tests:  0|0
0833288
Thu 25 Apr 2024 10:07:59 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
05ab13f
Thu 25 Apr 2024 10:10:23 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
009c9de
Thu 25 Apr 2024 10:14:42 PM UTC: 
 hashmap.c | 44 ++++++++------------------------------------
 1 file changed, 8 insertions(+), 36 deletions(-)
 tests:  0|0
f2e3912
Thu 25 Apr 2024 10:16:08 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:3: error: ‘size’ undeclared (first use in this function)
   53 |   size += 1;
      |   ^~~~
hashmap.c:53:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
82705c5
Thu 25 Apr 2024 10:16:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a0c808
Thu 25 Apr 2024 10:18:41 PM UTC: 
 hashmap.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  12|1
total_score: 60/70
58069f0
Thu 25 Apr 2024 10:20:47 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
ca5ecc8
Fri 26 Apr 2024 10:01:57 PM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  14|1
total_score: 60/70
505a99f
Fri 26 Apr 2024 10:02:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
df8b298
Fri 26 Apr 2024 10:04:11 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
7d6900e
Fri 26 Apr 2024 10:04:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9093ee2
Fri 26 Apr 2024 10:07:16 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
acbaa5e
Fri 26 Apr 2024 10:07:25 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|0
total_score: 70/70
b3129a3
